[gd_scene load_steps=7 format=2]

[ext_resource path="res://Images/Porta_abrindo.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Objetos/Porta.gd" type="Script" id=2]
[ext_resource path="res://Audio/SFX/Porta_V1.wav" type="AudioStream" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Abrir"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14 ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12, 59 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 36, 59 )

[node name="Porta" type="Node2D"]
script = ExtResource( 2 )

[node name="Porta_Abrindo" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 2.0

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 15

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/Abrir = SubResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -41, 0 )
shape = SubResource( 3 )
[connection signal="animation_finished" from="Sprite/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
